--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,13 @@
 /* Container for the whole app */
 .app-container {
   background-color: #cdcfff;
-  height: 100vh; /* Full height */
 }
 
-/* Dashboard section */
-.main-dashboard {
+.page-content {
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Button styles */
@@ -25,14 +24,15 @@
   text-align: center;
   background-color: #e4fdec;
   color: #535bf2;
-  border-style: solid;
+  border: solid 2px #535bf2;
   font-size: 18px;
   border-radius: 20px;
   cursor: pointer;
-  transition: background-color 0.5s ease;
+  transition: background-color 0.5s ease, transform 0.3s ease;
 }
 
 .dashboard-button:hover {
   background-color: #4a00ff;
   color: #aff4c6;
+  transform: scale(1.05);
 }
